# tathip

./: .gitignore  README.md  package-lock.json
backend/: .env  .env.example  CRAWLER_API_GUIDE.md  CRAWLER_README.md  FINAL_STATUS_REPORT.md  FIX_NOTES.md  QUICK_START.md  README.md  SCREENSHOT_REMOVAL_SUMMARY.md  TROUBLESHOOTING.md  WINDOWS_PLAYWRIGHT_FIXES.md  check_torch.py  database.db  pyproject.toml  test_crawler.py  test_playwright_windows.py  test_simple.py
backend/backend/: database.py  main.py  report_template.html
backend/backend/configs/: config.py  database.py  firebase.py  logging_config.py  registry.py
backend/backend/ml/: bestYOLOillegalImageClassified4.pt  bestYOLOslipClassified1.pt  prediction.py
backend/backend/models/: __init__.py  case.py  hero.py
backend/backend/routers/v1/: __init__.py  auths.py  cases.py  classifier_image.py  crawler.py  evidences.py  heroes.py  illegal_images.py  ocr.py  reports.py
backend/backend/utils/: read_save_ocr.py
frontend/: WEBCRAWLER_IMPLEMENTATION.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: CreateCaseForm.tsx  Header.tsx  LoadingSpinner.tsx  SideBar.tsx
frontend/src/configs/: config.ts
frontend/src/contexts/: AuthContext.tsx  ProtectedRoute.tsx  PublicRoute.tsx
frontend/src/docs/: COOKIE_TOKEN_MANAGEMENT.md
frontend/src/examples/: cookieTokenUsage.ts
frontend/src/types/: alert.ts  case.ts  evidence.ts  report.ts  user.ts
frontend/src/utils/: axiosInstance.ts  cookieManager.ts  tokenManager.ts
(+26 files in other folders)
